[gd_scene load_steps=9 format=2]

[ext_resource path="res://Console/image-6.png_1.png" type="Texture" id=1]
[ext_resource path="res://materials/menu/main/splash_text.gd" type="Script" id=2]
[ext_resource path="res://materials/menu/main/main_menu.gd" type="Script" id=3]
[ext_resource path="res://assets/textures/gui/sprites/widget/button.png" type="Texture" id=4]
[ext_resource path="res://materials/menu/options/options.tscn" type="PackedScene" id=5]
[ext_resource path="res://materials/menu/theme/theme.tres" type="Theme" id=6]
[ext_resource path="res://assets/textures/block/crimson_planks.png" type="Texture" id=8]
[ext_resource path="res://materials/menu/buttons/button07.png" type="Texture" id=9]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 6 )
script = ExtResource( 3 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_clip_content = true
texture = ExtResource( 8 )
expand = true
stretch_mode = 2
flip_h = true
flip_v = true

[node name="TitleScreen" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1

[node name="Logo" type="CenterContainer" parent="TitleScreen"]
margin_right = 1280.0
margin_bottom = 300.0
rect_min_size = Vector2( 0, 300 )

[node name="Logo" type="TextureRect" parent="TitleScreen/Logo"]
margin_left = 376.0
margin_top = 98.0
margin_right = 904.0
margin_bottom = 202.0
texture = ExtResource( 1 )

[node name="SplashHolder" type="Control" parent="TitleScreen/Logo/Logo"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="SplashText" type="Label" parent="TitleScreen/Logo/Logo/SplashHolder"]
modulate = Color( 1, 1, 0, 1 )
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -136.0
margin_top = 34.0
margin_right = 364.0
margin_bottom = 85.0
rect_rotation = -20.0
text = "OpenNoteBlockStudio? IN VR?"

[node name="ButtonHolder" type="HBoxContainer" parent="TitleScreen"]
margin_top = 304.0
margin_right = 1280.0
margin_bottom = 620.0
size_flags_vertical = 3
alignment = 1

[node name="MainButtons" type="VBoxContainer" parent="TitleScreen/ButtonHolder"]
margin_left = 448.0
margin_right = 832.0
margin_bottom = 316.0
custom_constants/separation = 20
alignment = 1

[node name="Start" type="TextureButton" parent="TitleScreen/ButtonHolder/MainButtons"]
margin_right = 384.0
margin_bottom = 64.0
rect_min_size = Vector2( 384, 64 )
texture_normal = ExtResource( 4 )
expand = true

[node name="Label" type="Label" parent="TitleScreen/ButtonHolder/MainButtons/Start"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1.0
margin_bottom = -18.0
text = "Start Game"
align = 1
valign = 1

[node name="Options" type="TextureButton" parent="TitleScreen/ButtonHolder/MainButtons"]
margin_top = 84.0
margin_right = 384.0
margin_bottom = 148.0
rect_min_size = Vector2( 384, 64 )
texture_normal = ExtResource( 4 )
expand = true

[node name="Label" type="Label" parent="TitleScreen/ButtonHolder/MainButtons/Options"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1.0
margin_bottom = -18.0
text = "Options"
align = 1
valign = 1

[node name="Exit" type="TextureButton" parent="TitleScreen/ButtonHolder/MainButtons"]
margin_top = 168.0
margin_right = 384.0
margin_bottom = 232.0
rect_min_size = Vector2( 384, 64 )
texture_normal = ExtResource( 4 )
expand = true

[node name="Label" type="Label" parent="TitleScreen/ButtonHolder/MainButtons/Exit"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1.0
margin_bottom = -18.0
text = "Exit Game"
align = 1
valign = 1

[node name="Exit3" type="TextureButton" parent="TitleScreen/ButtonHolder/MainButtons"]
margin_top = 252.0
margin_right = 384.0
margin_bottom = 316.0
rect_min_size = Vector2( 384, 64 )
texture_normal = ExtResource( 9 )
expand = true
stretch_mode = 5

[node name="Spacer" type="Control" parent="TitleScreen"]
margin_top = 624.0
margin_right = 1280.0
margin_bottom = 840.0
rect_min_size = Vector2( 0, 216 )

[node name="StartGame" type="HBoxContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButtons" type="VBoxContainer" parent="StartGame"]
margin_left = 240.0
margin_right = 1040.0
margin_bottom = 720.0
custom_constants/separation = 20
alignment = 1

[node name="Spacer" type="Control" parent="StartGame/StartButtons"]
margin_top = 178.0
margin_right = 800.0
margin_bottom = 242.0
rect_min_size = Vector2( 0, 64 )

[node name="RandomBlocks" type="TextureButton" parent="StartGame/StartButtons"]
margin_top = 262.0
margin_right = 800.0
margin_bottom = 342.0
rect_min_size = Vector2( 384, 64 )
texture_normal = ExtResource( 4 )

[node name="Label" type="Label" parent="StartGame/StartButtons/RandomBlocks"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1.0
margin_bottom = -18.0
text = "Virtual Reality"
align = 1
valign = 1

[node name="FlatGrass" type="TextureButton" parent="StartGame/StartButtons"]
margin_top = 362.0
margin_right = 800.0
margin_bottom = 442.0
rect_min_size = Vector2( 384, 64 )
texture_normal = ExtResource( 4 )

[node name="Label" type="Label" parent="StartGame/StartButtons/FlatGrass"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1.0
margin_bottom = -18.0
text = "FlatScreen"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackToTitle" type="TextureButton" parent="StartGame/StartButtons"]
margin_top = 462.0
margin_right = 800.0
margin_bottom = 542.0
rect_min_size = Vector2( 384, 64 )
texture_normal = ExtResource( 4 )

[node name="Label" type="Label" parent="StartGame/StartButtons/BackToTitle"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1.0
margin_bottom = -18.0
text = "Back"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" parent="." instance=ExtResource( 5 )]

[connection signal="pressed" from="TitleScreen/ButtonHolder/MainButtons/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="TitleScreen/ButtonHolder/MainButtons/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="TitleScreen/ButtonHolder/MainButtons/Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="TitleScreen/ButtonHolder/MainButtons/Exit3" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="StartGame/StartButtons/RandomBlocks" to="." method="_on_RandomBlocks_pressed"]
[connection signal="pressed" from="StartGame/StartButtons/FlatGrass" to="." method="_on_FlatGrass_pressed"]
[connection signal="pressed" from="StartGame/StartButtons/BackToTitle" to="." method="_on_BackToTitle_pressed"]
